--- a/index.css
+++ b/index.css
@@ -1,57 +1,85 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
 }
+
+/* header */
 
 header {
-  z-index: 999;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 15px 200px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: 0.5s ease;
+    z-index: 999;
+    position: fixed;
+    background: #b0d2da;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 15px 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.5s ease;
 }
 
-.sticky {
-  background: rgba(84, 66, 189, 0.856);
-  padding: 10px 200px;
+header.nav {
+    /* background: #B0D2DA; */
+    padding: 10px 200px;
 }
 
-.logo {
-  color: #fff;
-  font-size: 1.8em;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-decoration: none;
+header .logo {
+    color: #2f4a60;
+    font-size: 1.8em;
+    font-weight: 700;
+    padding: 0px 10px;
+    border-radius: 30px;
+    text-transform: uppercase;
+    text-decoration: none;
+    background-image: linear-gradient(-225deg,
+            #b0d2da 0%,
+            #9b59e2 29%,
+            #da7c9b 67%,
+            #b0d2da 100%);
+    animation: textclip 2s linear infinite;
 }
 
-.menu ul {
-  list-style-type: none;
-  display: flex;
+@keyframes textclip {
+    to {
+        background-position: 200% center;
+    }
 }
 
-.menu a {
-  color: #fff;
-  font-size: 1em;
-  font-weight: 500;
-  text-decoration: none;
-  margin-left: 30px;
+header .navigation {
+    position: relative;
 }
 
-.menu a:hover {
-  color: black;
+header .navigation ul {
+    list-style-type: none;
 }
 
-/* Navbar ends */
+header .navigation li {
+    float: left;
+}
+
+header .navigation a {
+    color: #2f4a60;
+    font-size: 1em;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 30px;
+}
+
+header .navigation a:hover {
+    color: #4151ad;
+}
+
+/* Main content */
+
+section {
+    padding: 100px 200px 100px 200px;
+}
 
 .main {
     position: relative;
@@ -59,8 +87,333 @@ header {
     min-height: 10vh;
     display: flex;
     align-items: center;
-  }
-  
-  .main .content {
+    background-color: #0a2440;
+}
+
+.main .content {
     max-width: 800px;
-  }
+}
+
+.main .content h2 {
+    color: #ffff;
+    font-size: 1.8em;
+    font-weight: 500;
+}
+
+.main .content h2 span {
+    font-size: 2.1em;
+    font-weight: 600;
+}
+
+.animated-text {
+    position: relative;
+    height: 50px;
+    overflow: hidden;
+}
+
+.animated-text h3 {
+    color: #b0d2da;
+    font-size: 2.3em;
+    font-weight: 700;
+    line-height: 70px;
+    letter-spacing: 1px;
+    animation: text-move 8s infinite;
+}
+
+@keyframes text-move {
+    0% {
+        margin-top: 0;
+    }
+
+    50% {
+        margin-top: -60px;
+    }
+
+    100% {
+        margin-top: 0;
+    }
+}
+
+.btn {
+    color: #2f4a60;
+    background: #b0d2da;
+    font-size: 1em;
+    font-weight: 600;
+    display: inline-block;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 1px;
+    border-radius: 2px;
+    margin-top: 30px;
+    transition: 0.5s ease;
+}
+
+.btn:hover {
+    background: #2f4a60;
+    color: #b0d2da;
+}
+
+.social {
+    margin-top: 50px;
+}
+
+.social a {
+    color: #fff;
+    font-size: 25px;
+    margin-right: 35px;
+}
+
+.social a:hover {
+    color: #b0d2da;
+}
+
+.title {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.section-title {
+    position: relative;
+    color: #3a6cf4;
+    font-size: 2.2em;
+    font-weight: 800;
+    margin-bottom: 60px;
+}
+
+.section-title:before {
+    content: "";
+    position: absolute;
+    top: 56px;
+    left: 50%;
+    width: 140px;
+    height: 4px;
+    background: #3a6cf4;
+    transform: translateX(-50%);
+}
+
+.section-title:after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #3a6cf4;
+    transform: translateX(-50%);
+}
+
+.about .content {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* margin-top: 10px; */
+}
+
+.about .content .col-left {
+    position: relative;
+    width: 45%;
+}
+
+.about .content .col-right {
+    position: relative;
+    width: 50%;
+}
+
+.about .content .col-left .img-card {
+    position: relative;
+    width: 100%;
+    min-height: 510px;
+    border-radius: 30px;
+    border: 3px solid rgb(228, 226, 226);
+}
+
+.about .content .col-left .img-card img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 30px;
+}
+
+.about .content .col-right .content-title {
+    font-size: 2em;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
+.about .content .col-right .paragraph-text {
+    font-size: 20px;
+}
+
+.para {
+    font-size: 20px;
+}
+
+.head2 {
+    font-size: 42px;
+    margin-top: 8%;
+}
+
+/* added media query */
+
+@media (max-width: 1137px) {
+    header {
+        padding: 12px 20px;
+    }
+
+    header.nav {
+        padding: 10px 20px;
+    }
+
+    header .navigation {
+        display: none;
+    }
+
+    header .navigation.active {
+        z-index: 888;
+        position: fixed;
+        background: #fff;
+        top: 0;
+        right: 0;
+        width: 280px;
+        height: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
+        transition: 0.3s ease;
+    }
+
+    header .navigation.active a:hover {
+        cursor: pointer;
+        color: #0c73b8;
+    }
+
+    header .navigation a {
+        color: #000;
+        font-size: 1.2em;
+        margin: 10px;
+        padding: 0 20px;
+        border-radius: 20px;
+        cursor: pointer;
+    }
+
+    header .navigation li {
+        float: none;
+        padding: 10px 0;
+    }
+
+    header .navigation a:hover {
+        background: #3a6cf4;
+        color: #fff;
+        transition: 0.3s ease;
+    }
+
+    .navigation a:hover {
+        color: #3a6cf4;
+    }
+
+    .menu-btn {
+        position: absolute;
+        background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSopajogIwqrdmY1Y5C0yG13if4houxPN9pZA&usqp=CAU) no-repeat;
+        background-size: 30px;
+        background-position: center;
+        width: 40px;
+        height: 40px;
+        right: 0;
+        margin: 0 20px;
+        cursor: pointer;
+        transition: 0.3s ease;
+    }
+
+    .menu-btn.active {
+        z-index: 999;
+        background: url(https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/256/Actions-dialog-close-icon.png) no-repeat;
+        background-size: 25px;
+        background-position: center;
+        transition: 0.3s ease;
+        filter: invert(1);
+    }
+
+    section {
+        padding: 80px 20px;
+    }
+
+    .main .content h2 {
+        font-size: 1em;
+    }
+
+    .animated-text h3 {
+        font-size: 2.2em;
+    }
+
+    .section-title {
+        font-size: 1.8em;
+    }
+
+    .about .content {
+        flex-direction: column;
+    }
+
+    .about .content .column {
+        position: relative;
+        width: 100%;
+    }
+
+    .about .content .col-right {
+        margin-top: 40px;
+    }
+}
+
+@media (max-width: 600px) {
+    header .navigation.active {
+        z-index: 888;
+        position: fixed;
+        background: #fff;
+        top: 0;
+        right: 0;
+        width: 180px;
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
+        transition: 0.3s ease;
+    }
+
+    .menu-btn.active {
+        z-index: 999;
+        background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSopajogIwqrdmY1Y5C0yG13if4houxPN9pZA&usqp=CAU) no-repeat;
+        background-size: 25px;
+        background-position: center;
+        transition: 0.3s ease;
+        filter: invert(1);
+        background-color: black;
+        cursor: pointer;
+    }
+
+    .menu-btn.active {
+        z-index: 999;
+        background: url(https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/256/Actions-dialog-close-icon.png) no-repeat;
+        background-size: 25px;
+        background-position: center;
+        transition: 0.3s ease;
+        filter: invert(1);
+        cursor: pointer;
+    }
+
+    .content {
+        display: block;
+    }
+}
