--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ header .navigation li {
 
 .clicked,header .navigation a:hover {
   color: white;
-  background-color: #0c73b8;
+  background-color: #2f4a60;
   border-radius: 20px;
 }
 
