--- a/index.css
+++ b/index.css
@@ -15,6 +15,12 @@
   color: black;
 }
 
+.inv{
+  width:50%;
+  color: blue;
+  margin-left: 28%;
+}
+
 header {
   z-index: 999;
   position: fixed;
@@ -417,6 +423,16 @@ section {
   list-style-type: none;
 }
 
+.itm {
+  font-weight: 600;
+  font-size: 18px;
+  font-style: italic;
+}
+
+.card:hover .itm {
+  color: rgb(226, 28, 67);
+}
+
 .mainDiv {
   display: flex;
   justify-content: space-between;
@@ -526,6 +542,55 @@ section {
 
 #btn2 {
   background-color: rgb(109, 220, 253);
+}
+
+
+
+.rowIs{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 36%;
+  margin-bottom: 5%;
+}
+
+#fontosm{
+  width: 30%;
+  height: 15%;
+  padding: 4%;
+  text-align: center;
+  font-size: 20px;
+  border: 2px solid rgb(221, 220, 220);
+}
+
+#cicin{
+  text-decoration: none;
+  color: #000;
+}
+
+.scrollToTop-btn {
+  z-index: 999;
+  position: fixed;
+  background: #3a6cf4;
+  color: #fff;
+  width: 45px;
+  height: 45px;
+  right: 0;
+  bottom: 10px;
+  font-size: 22px;
+  text-align: center;
+  line-height: 45px;
+  border-radius: 3px;
+  cursor: pointer;
+  pointer-events: none;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.scrollToTop-btn.active {
+  right: 20px;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .reveal {
@@ -702,6 +767,28 @@ section {
     padding: 35px 40px;
   }
 
+  #fontosm{
+    margin: auto;
+    width: 30%;
+    margin-top: 4%;
+  }
+
+  .info{
+    font-size: 30px;
+  }
+
+  .inv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .inv span{
+    text-align: center;
+    font-size: 30px;
+  }
+
 }
 
 @media (max-width: 600px){
@@ -802,9 +889,37 @@ section {
     margin-top: 2%;
   }
 
+  #fontosm{
+    margin: auto;
+    width: 50%;
+    margin-top: 4%;
+    height: 100%;
+  }
+
+  .inv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .inv span{
+    text-align: center;
+    font-size: 25px;
+  }
+
 }
 
-@media (max-width: 315px){
+@media (max-width: 375px){
+
+  .info{
+    font-size: 18px;
+  }
+
+  .inv span{
+    text-align: center;
+    font-size: 18px;
+  }
   
   @keyframes text-move {
     0% {
