git stats added

--- a/index.css
+++ b/index.css
@@ -593,6 +593,17 @@ section {
   pointer-events: auto;
 }
 
+.statics{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-icon{
+  border: 0px;
+}
+
 .reveal {
   position: relative;
   transform: translateY(50px);
@@ -723,6 +734,10 @@ section {
     min-height: 1000px;
   }
 
+  #h22{
+    text-align: center;
+  }
+
   .techstack .content {
     flex-direction: column;
   }
@@ -787,6 +802,19 @@ section {
   .inv span{
     text-align: center;
     font-size: 30px;
+  }
+
+  .statics{
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .cal{
+    overflow: hidden;
+  }
+
+  .calendar{
+    overflow: hidden;
   }
 
 }
