--- a/index.css
+++ b/index.css
@@ -10,13 +10,13 @@
 
 /* header */
 
-.atag{
+.atag {
   text-decoration: none;
   color: black;
 }
 
-.inv{
-  width:50%;
+.inv {
+  width: 50%;
   color: blue;
   margin-left: 28%;
 }
@@ -78,7 +78,8 @@ header .navigation li {
   padding: 8px 16px;
 }
 
-.clicked,header .navigation a:hover {
+.clicked,
+header .navigation a:hover {
   color: white;
   background-color: #2f4a60;
   border-radius: 20px;
@@ -238,7 +239,7 @@ section {
 .about .content .col-left .img-card {
   position: relative;
   width: 100%;
-  min-height: 510px;
+  min-height: 690px;
   border-radius: 30px;
   border: 3px solid rgb(228, 226, 226);
 }
@@ -266,7 +267,6 @@ section {
 
 .para {
   font-size: 20px;
-  
 }
 
 .head2 {
@@ -295,70 +295,17 @@ section {
 
 .techstack .content .col-left .content-title {
   margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.techstack .content .col-left .techPara {
+  margin-bottom: 20px;
+  font-size: 20px;
 }
 
 .techstack .content .col-right {
   position: relative;
   width: 46%;
-}
-
-.techstack .content .col-right .bar {
-  margin-bottom: 15px;
-  padding: 10px;
-}
-
-.techstack .content .col-right .bar .info {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 5px;
-}
-
-.techstack .content .col-right .bar .info span {
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.techstack .content .col-right .bar .line {
-  position: relative;
-  width: 100%;
-  height: 15px;
-  background: #ccc;
-  border-radius: 2px;
-}
-
-.techstack .content .col-right .bar .line:before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: 0;
-  border-radius: 2px;
-}
-
-.techstack .content .col-right .bar .html:before {
-  width: 95%;
-  background: #e45126;
-}
-
-.techstack .content .col-right .bar .css:before {
-  width: 90%;
-  background: #0c73b8;
-}
-
-.techstack .content .col-right .bar .javascript:before {
-  width: 80%;
-  background: #e3a324;
-}
-
-.techstack .content .col-right .bar .jquery:before {
-  width: 80%;
-  background: #30dd6d;
-}
-
-.techstack .content .col-right .bar .php:before {
-  width: 75%;
-  background: #6d7eb8;
 }
 
 .iconImage {
@@ -419,7 +366,7 @@ section {
   margin: 10px 0 7px 0;
 }
 
-.list{
+.list {
   list-style-type: none;
 }
 
@@ -441,7 +388,7 @@ section {
   margin-bottom: 4%;
 }
 
-.mainDiv> div {
+.mainDiv > div {
   width: 48%;
   height: 470px;
   margin-bottom: 4%;
@@ -456,7 +403,7 @@ section {
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .proj .content .card {
@@ -531,7 +478,7 @@ section {
   font-size: 18px;
   padding: 3px 2px;
   border: none;
-  border-radius: 5% 5% 5% 5% ;
+  border-radius: 5% 5% 5% 5%;
   font-weight: bolder;
   margin-top: 30px;
 }
@@ -544,9 +491,72 @@ section {
   background-color: rgb(109, 220, 253);
 }
 
+.cal {
+  background-color: #0a2440;
+}
 
+.cal .calendar {
+  color: white;
+}
 
-.rowIs{
+.cal .calendar span {
+  color: white;
+}
+
+.connectMe {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 15%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type="submit"] {
+  background-color: #04aa6d;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.rowIs {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -554,16 +564,15 @@ section {
   margin-bottom: 5%;
 }
 
-#fontosm{
-  width: 30%;
-  height: 15%;
+#fontosm {
+  width: 25%;
+  height: 10%;
   padding: 4%;
   text-align: center;
   font-size: 20px;
-  border: 2px solid rgb(221, 220, 220);
 }
 
-#cicin{
+#cicin {
   text-decoration: none;
   color: #000;
 }
@@ -593,15 +602,11 @@ section {
   pointer-events: auto;
 }
 
-.statics{
+.statics {
   display: flex;
   width: 100%;
   justify-content: center;
   align-items: center;
-}
-
-.contact-icon{
-  border: 0px;
 }
 
 .reveal {
@@ -616,19 +621,9 @@ section {
   opacity: 1;
 }
 
-
 /* added media query */
-  
-@media (max-width: 1024px) {
 
-  header {
-    padding: 12px 20px;
-  }
-
-  header.sticky {
-    padding: 10px 20px;
-  }
-
+@media (max-width: 1100px) {
   header .navigation {
     display: none;
   }
@@ -648,7 +643,7 @@ section {
     box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
     transition: 0.3s ease;
   }
-  header .navigation.active a:hover{
+  header .navigation.active a:hover {
     cursor: pointer;
     color: #0c73b8;
   }
@@ -694,7 +689,136 @@ section {
   .menu-btn.active {
     z-index: 999;
     background: url(https://spng.pngfind.com/pngs/s/253-2532502_png-file-svg-mobile-menu-close-icon-transparent.png)
-    no-repeat;
+      no-repeat;
+    background-size: 25px;
+    background-position: center;
+    transition: 0.3s ease;
+    filter: invert(1);
+  }
+
+  .about .content .col-left {
+    width: 65%;
+    margin-right: 50px;
+  }
+
+  .about .content .col-right {
+    width: 35%;
+  }
+
+  .about .content .col-right .content-title {
+    font-size: 2em;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+
+  .about .content .col-right .paragraph-text {
+    font-size: 20px;
+    color: #0a2440;
+    text-align: center;
+  }
+
+  .para {
+    font-size: 15px;
+  }
+
+  .head2 {
+    font-size: 35px;
+    margin-top: 8%;
+    color: #0a2440;
+    text-align: center;
+  }
+
+  #hcolor {
+    font-size: 30px;
+  }
+
+  .inv {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .inv span {
+    text-align: center;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 1023px) {
+  header {
+    padding: 12px 20px;
+  }
+
+  header.sticky {
+    padding: 10px 20px;
+  }
+
+  header .navigation {
+    display: none;
+  }
+
+  header .navigation.active {
+    z-index: 888;
+    position: fixed;
+    background: #fff;
+    top: 0;
+    right: 0;
+    width: 280px;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
+    transition: 0.3s ease;
+  }
+  header .navigation.active a:hover {
+    cursor: pointer;
+    color: #0c73b8;
+  }
+
+  header .navigation a {
+    color: #000;
+    font-size: 1.2em;
+    margin: 10px;
+    padding: 0 20px;
+    border-radius: 20px;
+    cursor: pointer;
+  }
+
+  header .navigation li {
+    float: none;
+    padding: 10px 0;
+  }
+
+  header .navigation a:hover {
+    background: #3a6cf4;
+    color: #fff;
+    transition: 0.3s ease;
+  }
+
+  .navigation a:hover {
+    color: #3a6cf4;
+  }
+
+  .menu-btn {
+    position: absolute;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1024px-Hamburger_icon.svg.png)
+      no-repeat;
+    background-size: 30px;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    right: 0;
+    margin: 0 20px;
+    cursor: pointer;
+    transition: 0.3s ease;
+  }
+
+  .menu-btn.active {
+    z-index: 999;
+    background: url(https://spng.pngfind.com/pngs/s/253-2532502_png-file-svg-mobile-menu-close-icon-transparent.png)
+      no-repeat;
     background-size: 25px;
     background-position: center;
     transition: 0.3s ease;
@@ -734,7 +858,7 @@ section {
     min-height: 1000px;
   }
 
-  #h22{
+  #h22 {
     text-align: center;
   }
 
@@ -751,29 +875,29 @@ section {
     margin-top: 40px;
   }
 
-  .mainDiv{
+  .mainDiv {
     display: block;
     height: 900px;
   }
- 
-  .projectImage{
+
+  .projectImage {
     margin: auto;
     width: 210%;
     height: 90%;
     /* margin-bottom: -225%; */
   }
 
-  #projectDes{
+  #projectDes {
     width: 100%;
     height: 100%;
   }
 
-  .btns{
+  .btns {
     height: 60px;
     margin-top: 30px;
   }
 
-  .rowIs{
+  .rowIs {
     display: block;
     margin-top: 2%;
   }
@@ -782,45 +906,43 @@ section {
     padding: 35px 40px;
   }
 
-  #fontosm{
+  #fontosm {
     margin: auto;
     width: 30%;
     margin-top: 4%;
   }
 
-  .info{
+  .info {
     font-size: 30px;
   }
 
-  .inv{
+  .inv {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
-  .inv span{
+  .inv span {
     text-align: center;
     font-size: 30px;
   }
 
-  .statics{
+  .statics {
     flex-direction: column;
     gap: 5px;
   }
 
-  .cal{
+  .cal {
     overflow: hidden;
   }
 
-  .calendar{
+  .calendar {
     overflow: hidden;
   }
-
 }
 
-@media (max-width: 600px){
-
+@media (max-width: 600px) {
   header .navigation.active {
     z-index: 888;
     position: fixed;
@@ -854,14 +976,14 @@ section {
   .menu-btn.active {
     z-index: 999;
     background: url(https://spng.pngfind.com/pngs/s/253-2532502_png-file-svg-mobile-menu-close-icon-transparent.png)
-    no-repeat;
+      no-repeat;
     background-size: 25px;
     background-position: center;
     transition: 0.3s ease;
     filter: invert(1);
   }
 
-  .content{
+  .content {
     display: block;
   }
 
@@ -873,7 +995,7 @@ section {
     flex-direction: column;
   }
 
-  .skills .skill-content .card{
+  .skills .skill-content .card {
     width: 50%;
     margin-bottom: 5px;
   }
@@ -890,65 +1012,74 @@ section {
     margin: 10px 0 7px 0;
   }
 
-  .mainDiv{
+  .mainDiv {
     display: block;
     height: 900px;
   }
- 
-  .projectImage{
+
+  .projectImage {
     margin: auto;
     width: 210%;
     height: 90%;
     /* margin-bottom: -225%; */
   }
 
-  #projectDes{
+  #projectDes {
     width: 100%;
     height: 100%;
   }
 
-  .btns{
+  .btns {
     height: 60px;
     margin-top: 30px;
   }
 
-  .rowIs{
+  .rowIs {
     display: block;
     margin-top: 2%;
   }
 
-  #fontosm{
+  #fontosm {
     margin: auto;
     width: 50%;
     margin-top: 4%;
     height: 100%;
   }
 
-  .inv{
+  .inv {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
-  .inv span{
+  .inv span {
     text-align: center;
     font-size: 25px;
   }
 
+  .col-25,
+  .col-75,
+  input[type="submit"] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
 
-@media (max-width: 375px){
-
-  .info{
+@media (max-width: 375px) {
+  .info {
     font-size: 18px;
   }
 
-  .inv span{
+  .inv span {
     text-align: center;
     font-size: 18px;
   }
-  
+
+  .proj .content {
+    margin-bottom: 130px;
+  }
+
   @keyframes text-move {
     0% {
       margin-top: 0;
